<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/device_imei_numbers"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/displayIMEI"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/display_imei"
        app:layout_constraintBottom_toTopOf="@+id/imeiContainer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleTextView" />

    <LinearLayout
        android:id="@+id/imeiContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toBottomOf="@id/titleTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:id="@+id/serialNumberTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:textAlignment="center"
            android:padding="8dp"
            android:background="@drawable/rounded_background"
            android:layout_marginBottom="8dp"
            android:text="@string/serial_number_default_text" />

        <TextView
            android:id="@+id/IMEItextView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:textAlignment="center"
            android:padding="8dp"
            android:background="@drawable/rounded_background"
            android:layout_marginBottom="8dp"
            android:text="@string/imei_1_default_text" />

        <TextView
            android:id="@+id/IMEItextView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:textAlignment="center"
            android:padding="8dp"
            android:background="@drawable/rounded_background"
            android:layout_marginBottom="8dp"
            android:text="@string/imei_2_default_text" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
